# moldea-py

./: LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
src/moldea/: __init__.py  client.py
