[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "moldea"
version = "1.0.0"
description = "The official SDK for accessing and integrating moldea’s API in your applications. "
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12.3"
authors = [
  { name = "Jesus Graterol", email = "jesusgraterol.dev@protonmail.com" }
]
dependencies = [
  "requests>=2.32.0",
]

[project.urls]
Homepage = "https://github.com/moldea-ai/moldea-py"